--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>🌿 순우리말 사전</h1>
+            <h1>🌿 순우리말 사전 🌿</h1>
             <p>우리의 아름다운 말, 함께 나누는 이야기</p>
         </header>
         <main>
@@ -84,7 +84,6 @@
                         <div>아는 단어 여부</div>
                         <div>아는 단어</div>
                         <div>궁금한 의미</div>
-                        <div>원하는 기능</div>
                     </div>
                     <div id="records-container">
                         <!-- 기록 목록이 여기에 동적으로 추가됩니다. -->
