--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
                         <div>아는 단어 여부</div>
                         <div>아는 단어</div>
                         <div>궁금한 의미</div>
+                        <div>원하는 기능</div>
+                        <div>날짜</div>
                     </div>
                     <div id="records-container">
                         <!-- 기록 목록이 여기에 동적으로 추가됩니다. -->
